--- a/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
+++ b/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
@@ -12,7 +12,8 @@
         رسالة
         الدعوة</button>
 
-    <a mat-raised-button color="accent" class="block app-btn-primary" href="{{inviteLink}}">الذهاب لصفحة الختمة</a>
+    <a mat-raised-button color="accent" class="block block large action-btn" href="{{inviteLink}}">الذهاب لصفحة
+        الختمة</a>
 
 
 </div>
