--- a/khitma/src/app/shared/celebration/celebration.component.scss
+++ b/khitma/src/app/shared/celebration/celebration.component.scss
@@ -1,3 +1,6 @@
+@import "~src/_variables";
+
+
 .confetti {
   display: flex;
   justify-content: center;
@@ -147,5 +150,5 @@
 }
 
 .confetti-piece {
-  color: #614316 !important;
+  color: $primary-color !important;
 }
