--- a/khitma/src/app/shared/juz/juz.component.html
+++ b/khitma/src/app/shared/juz/juz.component.html
@@ -1,4 +1,4 @@
-<div class="juz list-item" [ngClass]="cssClasses">
+<div class="juz list-item noselect" [ngClass]="cssClasses">
 
     <span class="index">{{juz.index+1}}</span>
 
