--- a/khitma/src/app/pages/create-group/create-group.component.scss
+++ b/khitma/src/app/pages/create-group/create-group.component.scss
@@ -1,5 +1,49 @@
+@import "~src/_variables";
+
+
 form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+section > header{
+  margin-bottom: 48px;
+}
+
+#group-type-selection {
+
+  mat-button-toggle-group {
+    width: 100%;
+    background: transparent;
+
+    border: none;
+    border: 2px solid $primary-color;
+
+    .mat-button-toggle-label-content {
+      line-height: 42px;
+      padding-left: 16px;
+    }
+
+    mat-button-toggle {
+
+      background: transparent;
+      color: black;
+      border: none !important;
+      // background: lightgray;
+      width: 50%;
+      color: $primary-color;
+      // border: 2px solid $primary-color;
+      background-color: white;
+
+      mat-icon {
+        margin-left: 4px;
+      }
+    }
+
+    .mat-button-toggle-checked {
+      color: white;
+      background-color: $primary-color;
+    }
+  }
 }
