--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -1,20 +1,15 @@
+@import "~src/_variables";
+
+
 :host {
   padding-bottom: 80px;
 }
 
-// mat-card {
-//   margin: 16px auto;
-// }
-
-// button {
-//   margin-top: 16px !important;
-// }
 
 .done-btn {
   height: 70px;
   line-height: 70px !important;
   padding: 0 16px !important;
-  // background-color: #0cc078 !important;
   font-weight: bold;
 }
 
@@ -26,7 +21,7 @@
   font-weight: bold;
 
   span {
-    color: #614316;
+    color: $primary-color;
     margin-top: 5px;
     display: block;
   }
@@ -52,17 +47,6 @@
     padding: 16px 0;
   }
 
-  // .my-juz-actions {
-  //   display: flex;
-  //   flex-direction: row;
-  //   justify-content: center;
-  //   align-items: center;
-  //   margin: 16px 0;
-
-  //   > * {
-  //     margin: 0 10px !important;
-  //   }
-  // }
 }
 
 .current-juz {
@@ -99,9 +83,6 @@
 
 .juz-grid-section,
 .juz-list-section {
-  // border-top: 1px solid #e5e5e5;
-  // border-bottom: 1px solid #e5e5e5;
-  // padding: 32px 0;
   margin: 0;
 }
 
@@ -116,60 +97,6 @@
 .view-mode {
   margin-bottom: 60px;
   margin-top: 0;
-}
-
-// .khitma-info {
-//   mat-expansion-panel {
-//     margin: -64px -32px 0px -32px;
-//     padding: 32px 0px;
-
-//     mat-panel-title {
-//       font-size: x-large;
-//       color: black;
-//     }
-//   }
-
-//   footer,
-//   mat-panel-description {
-//     margin-top: 16px;
-//   }
-// }
-
-.view-mode {
-  // background: lightgray;
-
-  mat-button-toggle-group {
-    // width: 100%;
-    background: transparent;
-
-    border: none;
-    border: 2px solid #614316;
-
-    span {
-      line-height: 36px;
-    }
-
-    mat-button-toggle {
-      // width: 50%;
-      background: transparent;
-      color: black;
-      border: none !important;
-      // background: lightgray;
-
-      color: #614316;
-      // border: 2px solid #614316;
-      background-color: white;
-
-      mat-icon {
-        margin-left: 8px;
-      }
-    }
-
-    .mat-button-toggle-checked {
-      color: white;
-      background-color: #614316;
-    }
-  }
 }
 
 .juz {
@@ -190,13 +117,13 @@
 
 .quran-explorer-btn {
   font-size: xxx-large;
-  color: #614316;
+  color: $primary-color;
   margin-top: 16px;
   width: auto;
   height: auto;
 
   span {
-    background-color: #614316;
+    background-color: $primary-color;
     top: -20px;
     left: 8px !important;
   }
@@ -205,7 +132,7 @@
 .dashboard-header {
   margin: -32px -32px 0;
   padding: 16px;
-  background: darken(#614316, 10%);
+  background:$primary-color;
 
   color: white;
 
@@ -225,7 +152,7 @@
 
 .copy-group-status-msg-btn {
   // margin: 32px auto 32px auto;
-  background-color: #614316;
+  background-color: $primary-color;
   color: white;
   margin-bottom: 16px;
   font-size: large !important;
@@ -246,9 +173,16 @@
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-  background-color: #6143168f;
+  background-color: $primary-color;
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-  background-color: #614316;
+  background-color: $primary-color;
+}
+
+
+.admin-actions{
+  button{
+    margin-bottom: 16px;
+  }
 }
