--- a/khitma/src/app/shared/juz/juz.component.scss
+++ b/khitma/src/app/shared/juz/juz.component.scss
@@ -1,3 +1,5 @@
+@import "~src/_variables";
+
 :host {
   display: block;
 
@@ -17,7 +19,7 @@
 .juz.list-item.my-juz .index {
   // background-color: #90d8f0;
   // font-size: 150%;
-  background-color: #614316;
+  background-color: $primary-color;
   color: white;
 }
 
@@ -77,7 +79,7 @@
 }
 
 .juz.list-item.my-juz {
-  background-color: #614316;
+  background-color: $primary-color;
   color: white;
   padding: 16px 8px;
   margin: 10px auto;
@@ -85,7 +87,7 @@
   .index {
     // background-color: #90d8f0;
     // font-size: 150%;
-    color: #614316;
+    color: $primary-color;
     background-color: white;
   }
 }
