--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -122,7 +122,7 @@
                 <div fxFlex="50%" class="center-center">
                     <button mat-raised-button color="accent" class="block large action-btn" (click)="juzDone()"
                         [disabled]="myJuzIndex == null">
-                        أتممت قراءة جزئي</button>
+                        أتممت قراءة جزء {{myJuzIndex + 1}}</button>
                 </div>
 
                 <div fxFlex="25%" class="center-center">
