--- a/khitma/src/app/shared/juz-list/juz-list.component.scss
+++ b/khitma/src/app/shared/juz-list/juz-list.component.scss
@@ -4,6 +4,6 @@
 //   align-items: center;
 // }
 
-.has-juz button {
-  display: none !important;
-}
+// .has-juz button {
+//   display: none !important;
+// }
