--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -173,7 +173,7 @@
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-  background-color: $primary-color;
+  background-color: lighten($primary-color,20%);
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
