--- a/khitma/src/app/shared/juz-list/juz-list.component.html
+++ b/khitma/src/app/shared/juz-list/juz-list.component.html
@@ -1,7 +1,14 @@
 <section [ngClass]="{'has-juz': myJuzIndex>=0}">
+
+
+    <span *ngIf="allowEdit" class="center-center tip">
+        <strong>نصيحة لمسؤول المجموعة:</strong>
+
+        يمكنك تعديل الأسماء بالضغط عليها وكتابة اسم
+        عضو حالي آخر أو اسم عضو جديد ثمّ الضغط على كبسة الحفظ التي تظهر بعد التغيير.</span>
+
+
     <app-juz *ngFor="let juz of ajza" [juz]="juz" [isEditMode]="allowEdit" [myJuzIndex]="myJuzIndex"
-        (click)="juzClicked(juz)">
+        (onJuzSelection)="juzClicked($event)" (onEdited)="juzEdited($event)">
     </app-juz>
 </section>
-
-<!--  -->
