--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -5,7 +5,7 @@
       <button mat-icon-button>
         <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
       </button>
-      <span><a href="/">ختمة.نت</a></span>
+      <span><a href="/">ختمة.نت <small>- النسخة التجريبيّة</small></a></span>
 
       <span class="spacer"></span>
 
