--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -16,7 +16,7 @@
                 لديك صلاحيّات مسؤول في هذه المجموعة
             </span>
 
-            <mat-icon>info</mat-icon>
+            <!-- <mat-icon>info</mat-icon> -->
         </section>
 
         <app-khitma-info [group]="group" [isExpanded]="false"></app-khitma-info>
