--- a/khitma/src/app/shared/khitma-info/khitma-info.component.scss
+++ b/khitma/src/app/shared/khitma-info/khitma-info.component.scss
@@ -1,5 +1,6 @@
 .khitma-info {
-  margin-top: -32px;
+  margin-top: -16px;
+  margin-bottom: -16px!important;
   padding: 10px;
   line-height: normal;
   text-align: center;
