keep only max juz per user in new khitma + Dua

--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -33,6 +33,10 @@
             ختمة
             جديدة للمجموعة</button>
 
+        <button style="margin-top: 16px;" mat-raised-button class="block" (click)="shareKhitmaCompletedDua()"> مشاركة
+            دعاء
+            الختمة</button>
+
     </section>
 
 
