--- a/khitma/src/app/pages/me/dashboard/dashboard.component.html
+++ b/khitma/src/app/pages/me/dashboard/dashboard.component.html
@@ -6,4 +6,4 @@
 </section>
 
 
-<a *ngIf="isShowArchive" mat-button class="block" href="/groups/archive">أرشيف الختمات</a>
+<a *ngIf="isShowArchive" mat-button class="block" href="/me/groups/archive">أرشيف الختمات</a>
