--- a/khitma/src/app/pages/create-group/create-group.component.html
+++ b/khitma/src/app/pages/create-group/create-group.component.html
@@ -46,12 +46,12 @@
 
         <mat-form-field appearance="fill" class="block">
             <mat-label>اسمك (مسؤول المجموعة)</mat-label>
-            <input matInput [(ngModel)]="author" name="author" required="true">
+            <input matInput [(ngModel)]="author" name="author" required="true" autocomplete="off">
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="block">
             <mat-label>نص إضافي (اختياري)</mat-label>
-            <textarea matInput [(ngModel)]="description" name="description"></textarea>
+            <textarea rows="4" matInput [(ngModel)]="description" name="description"></textarea>
         </mat-form-field>
 
         <button type="submit" class="block large action-btn" mat-raised-button
