--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -30,7 +30,7 @@
     </section>
 
 
-    <a *ngIf="isShowArchive" mat-button class="block" href="/groups/archive">أرشيف الختمات</a>
+    <a *ngIf="isShowArchive" mat-button class="block" href="me/groups/archive">أرشيف الختمات</a>
 
 
 
