--- a/khitma/src/app/shared/juz-toggle/juz-toggle.component.scss
+++ b/khitma/src/app/shared/juz-toggle/juz-toggle.component.scss
@@ -28,8 +28,9 @@
 .juz-toggle.my-juz {
   // background-color: #90d8f0;
   // font-size: 150%;
-  background-color: $primary-color ;
-  color: white;
+  // background-color: $primary-color ;
+  // color: white;
+  border: 2px solid brown;
   transform: scale(1.4);
 }
 
