--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -5,11 +5,24 @@
       <button mat-icon-button>
         <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
       </button>
-      <span><a href="/">ختمة.نت <small>- النسخة التجريبيّة</small></a></span>
+      <span><a href="/">ختمة.نت </a></span>
+
+      <!-- <small>- النسخة التجريبيّة</small>  -->
+
+      <span class="version">v0.8.6</span>
+
 
       <span class="spacer"></span>
 
-      <span class="version">v0.8.5</span>
+
+
+      <a href="/about">
+        <mat-icon class="help-btn">help_outline</mat-icon>
+      </a>
+
+
+
+
 
     </mat-toolbar>
 
