--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -4,9 +4,76 @@
     <img class="logo" src="assets/khitma-logo.png" />
     <p>
 
-        يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
-        دعوة أعضاء المجموعة للإنضمام ومتابعة تقدّم الختمة بشكل مباشر ومتاح للجميع.
+        <!-- يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
+        دعوة أعضاء المجموعة للإنضمام ومتابعة تقدّم الختمة بشكل مباشر ومتاح للجميع. -->
+
+        ختمة.نت هو تطبيق يتيح قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء
+        المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.
 
     </p>
+
+    <section>
+        <header style="margin-top: 64px;">شرح الاستخدام</header>
+
+        <p>في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/JnlMeuu2LXw" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+        <p> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
+
+    </section>
+
+    <hr />
+
+
+    <ul class="links">
+        <li><a href="/assets/privacy_policy.html">اتفاقيّة الخصوصيّة</a></li>
+        <li><a href="/assets/terms_of_use.html">شروط الاستخدام</a></li>
+
+    </ul>
+
+
+    <!-- <p>
+
+        عندما تصلك رسالة دعوة للانضمام الى ختمة نت ما عليك الا الضغط على الرابط المرفق في الرسالة
+        وبذلك سيتم الانتقال بشكل مباشر الى تطبيق ختمة نت أو موقع التطبيق.
+
+        هنا عليك كتابة اسمك، يفضل كتابة الاسم الثلاثي وباللغة العربية
+        والضغط على كبسة الانضمام للمجموعة
+
+        يمكنك الان رؤية الصفحة الخاصة بالمجموعة التي انضممت لها وفيها يمكنك رؤية ٣٠ جزءا والتي تمثل أجزاء القرآن الكريم
+        مقسمة الى ٣ الوان
+
+        اللون الاخضر يدل على الاجزاء التي تمت قرائتها وهي غير متاحة للاختيار.
+
+        اللون الاصفر هي الاجزاء التي تم اختيارها من اعضاء اخرين ولم ينتهوا من قرائتها حتى الان، وهي أيضا غير متاحة
+        للاختيار.
+
+        الأجزاء باللون الأحمر هي الأجزاء التي لم يتم اختيارها للقراءة بعد من قبل اي من الاعضاء الآخرين، ويمكن اختيار
+        واحد منها للبدء بالقراءة
+        عند الضغط على احد هذه الاجزاء سترى الدائرة قد تحولت الى صفراء واصبحت أكثر قليلا، هذا يعني ان الجزء
+
+        اصبح محجوزا لك، حيث سيراه باقي الاعضاء اصفر ولا يمكن اختياره بواسطتهم.
+
+
+        عند اختيار احد الاجزاء ستظهر لك ٣ امكانيات
+        في الجهة اليمنى يمكنك الضغط للانتقال لقراءة الجزء الذي اخترته عبر مصحف المدينة والذي يحتوي ايضا على تفسير
+        وامكانية سماع التلاوة أيضا
+        في حال اخترت جزءا بالخطأ أو لم تعد تستطيع قراءة الجزء الذي اخترته فيمكنك التنازل عنه بالضغط هنا (على الجهة
+        اليسرى) وبذلك يتم تحويله للون الأحمر وإتاحته لباقي الاعضاء
+        والان يمكنك اختيار جزء آخر.
+
+        الضغط على الختيار الاوسط يكون عند اتمام قراءة الجزء
+        سيتم التاكيد على قراءة الجزء لان هذا الاختيار لا يمكن التراجع عنه الا عبر التواصل مع مدير المجموعة
+
+        بعد قراءة الجزء يمكنك اختيار جزء اخر للقراءة او الانتظار لبداية دورة جديدة في الختمة
+        اذا كانت الختمة دورية فسيقوم التطبيق بحجز الجزء التالي لك بشكل تلقائي في المرّة القادمة.
+
+        يمكنكم ايضا اظهار الاسماء لرؤية باقي المشتركين في المجموعة والأجزاء التابعة لهم.
+
+        تقبل الله طاعاتكم ودمتم بحفظ الله وأمانته
+
+    </p> -->
 
 </div>
