--- a/khitma/src/app/pages/about/about.component.scss
+++ b/khitma/src/app/pages/about/about.component.scss
@@ -1,17 +1,35 @@
 .about {
-    font-size: larger;
-    line-height: normal;
-    text-align: justify;
-  
-    .logo {
-      display: block;
-      width: 50%;
-      margin: 64px auto 32px auto !important;
-    }
+  font-size: larger;
+  line-height: normal;
+  text-align: justify;
+  padding-bottom: 32px;
+
+  .logo {
+    display: block;
+    width: 25%;
+    margin: 32px auto 32px auto !important;
   }
-  
-  .about > * {
-    margin: 32px auto !important;
-    //   background-color: red;
+}
+
+// .about > * {
+//   margin: 32px auto !important;
+//   //   background-color: red;
+// }
+
+hr {
+  margin-top: 64px !important;
+}
+
+.links {
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  font-size: smaller;
+
+  a {
+    color: gray;
+    margin: 0 8px;
   }
-  
+}
