--- a/khitma/src/app/pages/me/dashboard/dashboard.component.html
+++ b/khitma/src/app/pages/me/dashboard/dashboard.component.html
@@ -1,9 +1,12 @@
-<section *ngIf="groups">
+<section *ngIf="groups; else noGroups">
 
     <app-group-list [groups]="groups" (onAction)="archiveGroup($event)"></app-group-list>
 
 
 </section>
+<ng-template #noGroups>
+    لا توجد لديك أي مجموعات حاليّا
+</ng-template>
 
 
 <a *ngIf="isShowArchive" mat-button class="block" href="/me/groups/archive">أرشيف الختمات</a>
