--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -2,6 +2,7 @@
 
 .content {
   padding: 32px;
+  padding-bottom: 64px;
   // display: flex;
   // flex-direction: column;
   // align-items: center;
