--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -16,9 +16,12 @@
         <header style="margin-top: 64px;">شرح الاستخدام</header>
 
         <p>في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/JnlMeuu2LXw" frameborder="0"
+
+
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+
 
         <p> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
 
